# vibootloadercore

./: CMakeLists.txt  CMakePresets.json  codecoverage.sh
core/: CMakeLists.txt
core/src/: vibootloadercore.c
core/src/inc/: vibootloadercore.h  vibootloadercore_private.h
tests/: tst_vibootloadercore.c
tests/main/: main.c
